-------------------------------------------------------------------

-------------------------------------------------------------------
0.1.0:
-Additional config file options
-Fixed pagination bug
-Added API error alerts
-------------------------------------------------------------------

-------------------------------------------------------------------
0.1.1:
-PHP version compatibility
-PHP extension missing alerts
-Leveldb extension support
-------------------------------------------------------------------

-------------------------------------------------------------------
0.1.2:
-Cached chart data to flat file dbs
-Optimized block info caching
-Additional block info caching error scanning / fixing
-------------------------------------------------------------------


-------------------------------------------------------------------
0.1.3:
-Cleanup / Tweaks
-Improved chart-loading UI / UX
-Password reset
-------------------------------------------------------------------


-------------------------------------------------------------------
0.1.4:
-Bug fixes / UI tweaks
-Prevhash cached to db block tables
-Detect chain change, reset db cache
-------------------------------------------------------------------


-------------------------------------------------------------------
0.1.5:
-Cached API data
-------------------------------------------------------------------


-------------------------------------------------------------------
0.1.6:
-Optimized caching
-------------------------------------------------------------------


-------------------------------------------------------------------
0.1.7:
-Title SEO
-More cache optimization
-Parsing out sender address from sender public key (many thanks to iantanwx)
-------------------------------------------------------------------


-------------------------------------------------------------------
0.1.8:
-Code review / cleanup
-------------------------------------------------------------------












