@@ -131,6 +131,13 @@ $no_prev_block = 1;
       				 
       							<?php
 					      	 	} 
+					      	 	elseif ( $key3 == 'MinerPubKey' ) {
+      							?>
+      					
+      							<div class="stats-row is-1deep"><b><?=ucfirst($key3)?>:</b> <?=$value3?> <br />(address: <a href='/address/<?=discover_address($value3)?>'><?=discover_address($value3)?></a>)</div>
+      				 
+      							<?php
+					      	 	} 
 					      	 	else {
       					?>
       					
