@@ -117,7 +117,8 @@
 
 -------------------------------------------------------------------
 0.1.8:
--Code review / cleanup
+-Code/UI/UX review and cleanup
+-CMC cache setting in config
 -------------------------------------------------------------------
 
 
